# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  pyci.yml
gendiff/: __init__.py  core.py  diff_builder.py  engine.py  gendiff.py  parser.py
gendiff/formatter/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: core.py  diff_builder.py  gendiff.py
tests/: test_diff_builder.py  test_formatter_json.py  test_formatter_plain.py  test_formatters.py  test_gendiff.py  test_gendiff_nested.py
